added the about me section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-image{
+    background-image: url("../../public/assets/Photos/bg.jpg");
+}
