completed contact me section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,7 @@
 .custom-image{
     background-image: url("../../public/assets/Photos/bg.jpg");
 }
+
+.custom-image2{
+    background-image: url("../../public/assets/Photos/bg3.jpg");
+}
